<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailStoryActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="name"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <ImageView
        android:id="@+id/photoUrl"
        android:transitionName="profile"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profilepic" />

    <TextView
        android:id="@+id/description"
        android:transitionName="description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/photoUrl"
        app:layout_constraintStart_toStartOf="@+id/photoUrl"
        app:layout_constraintTop_toBottomOf="@+id/photoUrl" />
</androidx.constraintlayout.widget.ConstraintLayout>